src/objects/SBQQ__QuoteTemplate__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__SubGroupField__c</fullName>
        <description>Field used to sub group line items.</description>
        <inlineHelpText>Field used to sub group line items.</inlineHelpText>
        <label>Sub Group Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubtotalField__c</fullName>
        <description>Field to sum and display as group/quote subtotal.</description>
        <inlineHelpText>Select a Field to sum and display as group/quote subtotal.</inlineHelpText>
        <label>Subtotal Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List Total</fullName>
                </value>
                <value>
                    <fullName>Customer Total</fullName>
                </value>
                <value>
                    <fullName>Net Total</fullName>
                </value>
                <value>
                    <fullName>Regular Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubtotalLabel__c</fullName>
        <description>Label for subtotal field.</description>
        <inlineHelpText>Enter a label for the subtotal field.</inlineHelpText>
        <label>Subtotal Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermBodyIndent__c</fullName>
        <defaultValue>15</defaultValue>
        <description>Indent in pixels of quote term body relative to the term number.</description>
        <inlineHelpText>Indent in pixels of quote term body relative to the term number.</inlineHelpText>
        <label>Term Body Indent (px)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermsConditionsTitle__c</fullName>
        <defaultValue>&quot;Terms &amp; Conditions&quot;</defaultValue>
        <description>Title of the section that displays Terms &amp; Conditions.</description>
        <inlineHelpText>Title of the section that displays Terms &amp; Conditions.</inlineHelpText>
        <label>Terms &amp; Conditions Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermsConditions__c</fullName>
        <description>Terms &amp; Conditions printed on every document generated with this template.</description>
        <inlineHelpText>Terms &amp; Conditions printed on every document generated with this template.</inlineHelpText>
        <label>Terms &amp; Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermsNumbered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether quote terms rendered by this template are numbered.</description>
        <inlineHelpText>Select the checkbox if the quote terms rendered by this template should be numbered.</inlineHelpText>
        <label>Number Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__TextColor__c</fullName>
        <description>Default color (in HEX) applied to text in this template.</description>
        <inlineHelpText>Default color (in HEX) applied to text in this template.</inlineHelpText>
        <label>Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TopMargin__c</fullName>
        <defaultValue>0.5</defaultValue>
        <description>Top margin on the page.</description>
        <inlineHelpText>Top margin on the page.</inlineHelpText>
        <label>Top Margin</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalField__c</fullName>
        <description>Field to sum and display as group/quote total.</description>
        <inlineHelpText>Select the Field to sum and display as group/quote total.</inlineHelpText>
        <label>Total Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net Total</fullName>
                </value>
                <value>
                    <fullName>List Total</fullName>
                </value>
                <value>
                    <fullName>Customer Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TotalLabel__c</fullName>
        <description>Label for total field.</description>
        <inlineHelpText>Enter the label for the field set in Total Field.</inlineHelpText>
        <label>Total Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether quote totals should be printed on the quote document.</description>
        <inlineHelpText>Select the checkbox to hide quote totals on the quote document.</inlineHelpText>
        <label>Hide Totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__WatermarkId__c</fullName>
        <description>Salesforce ID for the document containing the watermark image used in the quote PDF.</description>
        <inlineHelpText>Salesforce ID for the document containing the watermark image used in the quote PDF.</inlineHelpText>
        <label>Watermark ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Quote_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you use the template for signature, please will select the field. Because quote status should be updated after signature.
If you use the template for review, please will not select the field. Because quote status should not be updated after review.</description>
        <inlineHelpText>Whether quote status should be updated when the document completed in DocuSign?</inlineHelpText>
        <label>Update Quote Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Quote Template</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Default__c</columns>
        <columns>SBQQ__PageOrientation__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__Blank_Footer_Height</fullName>
        <active>true</active>
        <description>Checks if Footer Height is blank if Page Number Position is set to &apos;Footer&apos;.</description>
        <errorConditionFormula>IF(AND(ISPICKVAL(SBQQ__PageNumberPosition__c, &quot;Footer&quot;),
            ISBLANK(SBQQ__FooterHeight__c)), true, null)</errorConditionFormula>
        <errorMessage>Footer Height can not be blank if Page Number Position is set to Footer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Blank_Header_Height</fullName>
        <active>true</active>
        <description>Checks if Header Height is blank if Page Number Position is set to &apos;Header&apos;.</description>
        <errorConditionFormula>IF(AND(ISPICKVAL(SBQQ__PageNumberPosition__c, &quot;Header&quot;),
            ISBLANK(SBQQ__HeaderHeight__c)), true, null)</errorConditionFormula>
        <errorMessage>Header Height can not be blank if Page Number Position is set to Header.</errorMessage>
    </validationRules>
</CustomObject>